--- a/pic-space-frontend/package.json
+++ b/pic-space-frontend/package.json
@@ -19,17 +19,18 @@
   "dependencies": {
     "@ant-design/icons-vue": "^7.0.1",
     "@tailwindcss/vite": "^4.1.13",
-    "@umijs/openapi": "^1.14.1",
     "ant-design-vue": "~4.2.6",
     "axios": "^1.12.2",
     "pinia": "^3.0.3",
     "tailwindcss": "^4.1.13",
+    "tslib": "^2.8.1",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.2",
     "@types/node": "^22.16.5",
+    "@umijs/openapi": "^1.14.1",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/eslint-config-prettier": "^10.2.0",
     "@vue/eslint-config-typescript": "^14.6.0",
