--- a/pic-space-frontend/package.json
+++ b/pic-space-frontend/package.json
@@ -21,6 +21,7 @@
     "@tailwindcss/vite": "^4.1.13",
     "ant-design-vue": "~4.2.6",
     "axios": "^1.12.2",
+    "dayjs": "^1.11.18",
     "pinia": "^3.0.3",
     "tailwindcss": "^4.1.13",
     "tslib": "^2.8.1",
