--- a/pic-space-backend/src/main/resources/application.yml
+++ b/pic-space-backend/src/main/resources/application.yml
@@ -60,7 +60,7 @@ space:
   minio:
     access-key-id: 6KMyYpBT5D4HTXoVH702
     access-key-secret: n5kWezUSIeCDqsxE0t5OBCuwlIPWOoyQdr8fTTaj
-    bucket-name: sky-take-out
+    bucket-name: pic-space
     endpoint: http://localhost:9000
 
 ## 对象存储配置（需要从腾讯云获取）
