--- a/pic-space-frontend/package.json
+++ b/pic-space-frontend/package.json
@@ -22,6 +22,7 @@
     "ant-design-vue": "~4.2.6",
     "axios": "^1.12.2",
     "dayjs": "^1.11.18",
+    "file-saver": "^2.0.5",
     "pinia": "^3.0.3",
     "tailwindcss": "^4.1.13",
     "tslib": "^2.8.1",
@@ -30,6 +31,7 @@
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.2",
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^22.16.5",
     "@umijs/openapi": "^1.14.1",
     "@vitejs/plugin-vue": "^6.0.1",
