--- a/pic-space-backend/pom.xml
+++ b/pic-space-backend/pom.xml
@@ -102,12 +102,14 @@
             <artifactId>jsoup</artifactId>
             <version>1.15.3</version>
         </dependency>
-        <!-- 对象存储 -->
-        <dependency>
-            <groupId>com.qcloud</groupId>
-            <artifactId>cos_api</artifactId>
-            <version>5.6.227</version>
-        </dependency>
+        <!-- 图片压缩 -->
+<!--        macos使用兼容性有问题-->
+<!--        &lt;!&ndash; webp-imageio 依赖 &ndash;&gt;-->
+<!--        <dependency>-->
+<!--            <groupId>org.sejda.imageio</groupId>-->
+<!--            <artifactId>webp-imageio</artifactId>-->
+<!--            <version>0.1.6</version>-->
+<!--        </dependency>-->
         <!-- 工具库：https://doc.hutool.cn/pages/index/ -->
         <dependency>
             <groupId>cn.hutool</groupId>
