--- a/pic-space-frontend/package.json
+++ b/pic-space-frontend/package.json
@@ -18,13 +18,20 @@
   "dependencies": {
     "@ant-design/icons-vue": "^7.0.1",
     "@tailwindcss/vite": "^4.1.13",
+    "@vueuse/core": "^13.9.0",
     "ant-design-vue": "~4.2.6",
     "axios": "^1.12.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dayjs": "^1.11.18",
     "file-saver": "^2.0.5",
+    "lucide-vue-next": "^0.544.0",
     "pinia": "^3.0.3",
+    "reka-ui": "^2.5.0",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13",
     "tslib": "^2.8.1",
+    "tw-animate-css": "^1.4.0",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
   },
