--- a/pic-space-frontend/package.json
+++ b/pic-space-frontend/package.json
@@ -33,7 +33,8 @@
     "tslib": "^2.8.1",
     "tw-animate-css": "^1.4.0",
     "vue": "^3.5.18",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "vue-waterfall-plugin-next": "^2.6.9"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.2",
