--- a/pic-space-backend/pom.xml
+++ b/pic-space-backend/pom.xml
@@ -11,6 +11,8 @@
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
+        <maven.compiler.release>17</maven.compiler.release>
+
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <spring-boot.version>2.7.6</spring-boot.version>
@@ -103,13 +105,13 @@
             <version>1.15.3</version>
         </dependency>
         <!-- 图片压缩 -->
-<!--        macos使用兼容性有问题-->
-<!--        &lt;!&ndash; webp-imageio 依赖 &ndash;&gt;-->
-<!--        <dependency>-->
-<!--            <groupId>org.sejda.imageio</groupId>-->
-<!--            <artifactId>webp-imageio</artifactId>-->
-<!--            <version>0.1.6</version>-->
-<!--        </dependency>-->
+        <!--        macos使用兼容性有问题-->
+        <!--        &lt;!&ndash; webp-imageio 依赖 &ndash;&gt;-->
+        <!--        <dependency>-->
+        <!--            <groupId>org.sejda.imageio</groupId>-->
+        <!--            <artifactId>webp-imageio</artifactId>-->
+        <!--            <version>0.1.6</version>-->
+        <!--        </dependency>-->
         <!-- 工具库：https://doc.hutool.cn/pages/index/ -->
         <dependency>
             <groupId>cn.hutool</groupId>
@@ -165,7 +167,9 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.11.0</version>
                 <configuration>
-                    <release>${java.version}</release>
+                    <!--specify  current java version, otherwise ,
+                     there will be a build error: not support <version>-->
+                    <release>${maven.compiler.release}</release>
                     <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
