--- a/pic-space-backend/src/main/resources/application.yml
+++ b/pic-space-backend/src/main/resources/application.yml
@@ -7,6 +7,8 @@ server:
       cookie:
         max-age: 2592000
 spring:
+  profiles:
+    active: dev
   application:
     name: pic-space-backend
   # 数据库配置
