--- a/pic-space-frontend/package.json
+++ b/pic-space-frontend/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@ant-design/icons-vue": "^7.0.1",
     "@tailwindcss/vite": "^4.1.13",
+    "@vee-validate/zod": "^4.15.1",
     "@vueuse/core": "^13.9.0",
     "ant-design-vue": "~4.2.6",
     "axios": "^1.12.2",
@@ -32,9 +33,11 @@
     "tailwindcss": "^4.1.13",
     "tslib": "^2.8.1",
     "tw-animate-css": "^1.4.0",
+    "vee-validate": "^4.15.1",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1",
-    "vue-waterfall-plugin-next": "^2.6.9"
+    "vue-waterfall-plugin-next": "^2.6.9",
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.2",
