--- a/pic-space-frontend/package.json
+++ b/pic-space-frontend/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@ant-design/icons-vue": "^7.0.1",
     "@tailwindcss/vite": "^4.1.13",
+    "@tanstack/vue-table": "^8.21.3",
     "@vee-validate/zod": "^4.15.1",
     "@vueuse/core": "^13.9.0",
     "ant-design-vue": "~4.2.6",
